fixed responsive design with simple meta tag; responsiveness wasn't working on mobile devices for some reason

--- a/app/assets/stylesheets/dewey.scss
+++ b/app/assets/stylesheets/dewey.scss
@@ -54,12 +54,9 @@ body {
 			float: left;
 		}
 
-		/*
-		img {
-			height: 42px;
-			float: left;
+		.result-text-container {
+			width: auto;
 		}
-		*/
 		
 		.list-group-item-heading {
 			color: $white;
